--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>DNPS P5</title>
+        <title>CHEMISTRY RESEARCH</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -10,9 +10,9 @@
 
     <body>
         <div class="app">
-            <h1>Science</h1>
-            <div id="header">Welcome to Mr Sam's class</div>
-            <p>Wisdom Term</p>
+            <h1>CHEMISTRY</h1>
+            <div id="header">WELCOME TO MR SAM'S CLASS</div>
+            <p>IUPAC Nomenclature</p>
             <div class="quiz">
                 <h2 id="question">Question goes here</h2>
                 <div id="answer-buttons">
