--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="app">
             <h1>CHEMISTRY</h1>
             <div id="header">WELCOME TO MR SAM'S CLASS</div>
-            <p>IUPAC Nomenclature</p>
+            <p>IUPAC Nomenclature of Organic Compounds</p>
             <div class="quiz">
                 <h2 id="question">Question goes here</h2>
                 <div id="answer-buttons">
